clusters/beryjuorg-prd/proxy/alertmanager.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-alertmanager
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-authentik-proxy-infra
      hosts:
        - alertmanager.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - alertmanager.infra.beryju.org
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-alertmanager
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-alertmanager
  hosts:
    - alertmanager.infra.beryju.org
  http:
    - match:
        - uri:
            prefix: "/outpost.goauthentik.io"
      route:
        - destination:
            host: ak-outpost-k8s.authentik.svc.cluster.local
            port:
              number: 9000
    - route:
        - destination:
            port:
              number: 9093
            host: prom-kube-prometheus-stack-alertmanager.monitoring-system.svc.cluster.local
