clusters/beryjuorg-prd/proxy/analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: proxy
spec:
  type: ExternalName
  externalName: analytics1.prod.beryju.org
  ports:
  - name: http
    protocol: TCP
    port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics
  namespace: proxy
spec:
  ingressClassName: istio
  rules:
    - host: analytics.beryju.org
      http:
        paths:
          - backend:
              service:
                name: analytics
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - analytics.beryju.org
      secretName: beryjuorg-analytics
