clusters/beryjuorg-prd/proxy/grafana-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-grafana
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-gw-grafana
      hosts:
        - grafana.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.infra.beryju.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-gw-grafana
  namespace: istio-system
spec:
  hosts:
    - grafana.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 80
            host: grafana.grafana.svc.cluster.local
