clusters/beryjuorg-prd/proxy/log-loki.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log
  namespace: proxy
spec:
  type: ExternalName
  externalName: log1.prod.beryju.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: log-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: log-loki
  namespace: proxy
spec:
  rules:
    - host: log.beryju.org
      http:
        paths:
          - backend:
              service:
                name: log
                port:
                  number: 3100
            path: /loki
            pathType: Prefix
  tls:
    - hosts:
        - log.beryju.org
