clusters/beryjuorg-prd/proxy/log-offiste.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log
  namespace: proxy
spec:
  type: ExternalName
  externalName: log1.prod.beryju.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: log-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/rewrite-target: /gelf
  name: log-offsite
  namespace: proxy
spec:
  rules:
    - host: log.beryju.org
      http:
        paths:
          - backend:
              service:
                name: log
                port:
                  number: 10008
            path: /gelf/offsite
            pathType: Prefix
  tls:
    - hosts:
        - log.beryju.org
