clusters/beryjuorg-prd/proxy/minio-offsite-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-minio-offsite
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-gw-minio-offsite
      hosts:
        - backup-s3.beryju.org
        - "*.backup-s3.beryju.org"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - backup-s3.beryju.org
        - "*.backup-s3.beryju.org"
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-minio-offsite
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-minio-offsite
  hosts:
    - backup-s3.beryju.org
    - "*.backup-s3.beryju.org"
  http:
    - match:
        - headers:
            host:
              exact: backup-s3.beryju.org
        - headers:
            host:
              exact: "*.backup-s3.beryju.org"
      route:
        - destination:
            host: minio-offsite.minio.svc.cluster.local
            port:
              number: 9000
          headers:
            response:
              set:
                server: "NetApp CSS/9.8P4"
          weight: 100
    - match:
        - headers:
            host:
              exact: console.backup-s3.beryju.org
      route:
        - destination:
            host: minio-offsite.minio.svc.cluster.local
            port:
              number: 9001
          weight: 100
