clusters/beryjuorg-prd/proxy/monitoring-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20M
  name: monitoring-prom
  namespace: proxy
spec:
  rules:
    - host: monitoring.beryju.org
      http:
        paths:
          - backend:
              service:
                name: monitoring
                port:
                  number: 10908
            path: /api/v1/receive
            pathType: Prefix
  tls:
    - hosts:
        - monitoring.beryju.org
      secretName: monitoring-acme
