clusters/beryjuorg-prd/proxy/monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring
  namespace: proxy
spec:
  type: ExternalName
  externalName: mon1.prod.beryju.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: monitoring
  namespace: proxy
spec:
  ingressClassName: nginx
  rules:
    - host: monitoring.beryju.org
      http:
        paths:
          - backend:
              service:
                name: monitoring
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - monitoring.beryju.org
      secretName: monitoring-acme
