clusters/beryjuorg-prd/proxy/oxidized.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: beryjuorg-se-oxidized
  namespace: istio-system
spec:
  hosts:
    - oxidized.infra.beryju.org
  ports:
    - number: 8888
      name: http
      protocol: http
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-oxidized
  namespace: istio-system
spec:
  hosts:
    - oxidized.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 8888
            host: oxidized.oxidized.svc.cluster.local
