clusters/beryjuorg-prd/proxy/passthrough-overseer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-overseerr
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-gw-overseerr
      hosts:
        - requests.jela.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - requests.jela.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-overseerr
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-overseerr
  hosts:
    - requests.jela.io
  http:
    - route:
        - destination:
            port:
              number: 5055
            host: overseerr.overseerr.svc.cluster.local
