clusters/beryjuorg-prd/proxy/prom.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: beryjuorg-se-prometheus
  namespace: istio-system
spec:
  hosts:
    - prometheus.infra.beryju.org
  ports:
    - number: 9090
      name: http
      protocol: http
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-prometheus
  namespace: istio-system
spec:
  hosts:
    - prometheus.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: beryjuorg-mon-prometheus.monitoring-system.svc.cluster.local
