clusters/beryjuorg-prd/proxy/radarr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: beryjuorg-se-radarr
  namespace: istio-system
spec:
  hosts:
    - radarr-dl-stack.infra.beryju.org
  ports:
    - number: 8080
      name: http
      protocol: http
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-radarr
  namespace: istio-system
spec:
  hosts:
    - radarr-dl-stack.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 7878
            host: radarr.dl-stack.svc.cluster.local
