clusters/beryjuorg-prd/proxy/requests.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: proxy
spec:
  type: ExternalName
  externalName: overseerr.defr.k8s.beryju.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: overseerr
  namespace: proxy
spec:
  ingressClassName: nginx
  rules:
    - host: requests.jela.io
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - requests.jela.io
      secretName: requests-acme
