clusters/beryjuorg-prd/proxy/sentry-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-old
  namespace: proxy
spec:
  ingressClassName: nginx
  rules:
    - host: sentry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: sentry-public-proxy
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sentry.beryju.org
      secretName: sentry-acme
