clusters/beryjuorg-prd/proxy/sentry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentry
  namespace: proxy
spec:
  type: ExternalName
  externalName: v220211129430168219.megasrv.de
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sentry
  namespace: proxy
spec:
  ingressClassName: nginx
  rules:
    - host: sentry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: sentry
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sentry.beryju.org
      secretName: sentry-acme
