clusters/beryjuorg-prd/proxy/vault.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: proxy
spec:
  type: ExternalName
  externalName: vault1.prod.beryju.org
  ports:
  - name: http
    protocol: TCP
    port: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: proxy
spec:
  ingressClassName: istio
  rules:
    - host: vault.beryju.org
      http:
        paths:
          - backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vault.beryju.org
      secretName: beryjuorg-vault
