clusters/beryjuorg-prd/proxy/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
    - to:
        - operation:
            hosts:
              - "*.infra.beryju.org"
            notHosts:
              - tautulli-dl-stack.infra.beryju.org
              - grafana.infra.beryju.org
              - puppet-dashboard.infra.beryju.org
              - unifi.infra.beryju.org
              - netbox.infra.beryju.org
              - netapp-aiq.infra.beryju.org
              - infra.infra.beryju.org
              - splunk.infra.beryju.org
              - splunk-collector.infra.beryju.org
